<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:layoutDirection="rtl"
    tools:context=".mvp.view.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/container_client_info"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/client_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="ص محمد احمد ابراهيم "
                    android:id="@+id/tv_client_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                    />

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="1000 "
                    android:id="@+id/tv_balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"

                    />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chart"
            android:layout_weight="1"
            android:visibility="gone"
            android:id="@+id/btn_chart"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/container_client_info"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_today_offer"
                android:text="@string/today_offers"
                android:textSize="20sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_special_items"
                android:text="@string/special_items"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_wholesale_items"
                android:text="@string/wholesale_items"
                android:textSize="20sp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >

            <Button
                android:id="@+id/btn_deficient_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deficient_items"
                android:textSize="20sp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_all_items"
                android:text="@string/all_items"
                android:textSize="20sp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_request_items"
                android:text="@string/request_items"
                android:textSize="15sp"
                />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>