<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="80dp"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:gravity="right"
            android:layoutDirection="rtl"
            android:singleLine="true"
            android:layout_marginTop="8dp"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

</RelativeLayout>